# readnest

./: .gitignore  .htaccess  CLAUDE.md  CLEANUP_SUMMARY.md  DEVELOPMENT_GUIDELINES.md  DEVELOPMENT_RULES.md  PDO_MIGRATION_PLAN.md  account.php  account_deleted.php  activities.php  addCart.php  add_book.php  add_booklink.php  add_original_book.php  ai_concierge.php  ai_review_api.php  ai_review_simple.php  announcement_detail.php  announcements.php  api_keys.php  author.php  author_books.php  book_detail.php  book_detail_ajax.php  book_discovery.php  book_entity.php  bookshelf.php  bookshelf_all.php  bookshelf_performance_analysis.md  cache_reading_map.php  change_book_image.php  cleanup_duplicate_tags.php  cleanup_unused_files.php  clear_activities_cache.php  clear_cache_simple.php  clear_search_cache.php  clearsessions.php  composer.json  config.php.example  contact_submit.php  (+81 more)
.claude/: settings.local.json
.well-known/: .htaccess  mcp.php  oauth-authorization-server  oauth-authorization-server.php  oauth-protected-resource.php
admin/: 403.php  BATCH_IMPROVEMENTS.md  CLEANUP_LIST.md  CRON_SETUP.md  EMBEDDING_SETUP.md  EMBEDDING_USAGE.md  README_AUTHOR_TOOLS.md  UPLOAD_FILES.txt  add_finished_date_column.php  add_first_login_flag.php  add_google_auth_table.php  add_performance_indexes.php  add_reading_analysis_table.php  add_tag_indexes.php  admin_auth.php  admin_helpers.php  announcements.php  cache_clear.php  (+57 more)
readnest-mcp/: .env.example  .gitignore  README.md  SECURITY.md  SETUP.md  pyproject.toml
readnest-mcp/src/readnest_mcp/: __init__.py  client.py  server.py
(+252 files in other folders)
